Added some arguments & test files to TestMCDownloadLaunch